force-app/main/default/objects/Produit__c.object
<CustomObject>
    <fields>
        <fullName>Availability_Date__c</fullName>
        <label>Availability Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Line__c</fullName>
        <formula>TEXT( Product_Line__r.Business_Line__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Currency</label>
        <referenceTo>Devise__c</referenceTo>
        <relationshipLabel>Produits</relationshipLabel>
        <relationshipName>Produits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Price_Per_Unit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Default Price Per Unit</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Export_Control_Sensibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Export Control Sensibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Free_Field_1__c</fullName>
        <label>Free Field 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Free_Field_2__c</fullName>
        <label>Free Field 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Free_Field_3__c</fullName>
        <label>Free Field 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBU__c</fullName>
        <formula>TEXT(Product_Line__r.GBU__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <label>R&amp;D Legal Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Legal_entity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Orderable__c</fullName>
        <formula>IF(  ISPICKVAL(Product_Status__c, &apos;Full authorization for Bid&apos;)  ||  ISPICKVAL(Product_Status__c, &apos;Conditional auth. for Bid&apos;) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Orderable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phase_Out_Date__c</fullName>
        <label>Phase Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Policy_Documentation__c</fullName>
        <label>Policy Documentation</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Line_Family__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Prod Family 1</fullName>
                </value>
                <value>
                    <fullName>Prod Family 2</fullName>
                </value>
                <value>
                    <fullName>Prod Family 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line_Family__c</fullName>
        <label>Product Line Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Av-BL1-PL1</fullName>
                </value>
                <value>
                    <fullName>Av-BL1-PL2</fullName>
                </value>
                <value>
                    <fullName>Av-BL2-PL1</fullName>
                </value>
                <value>
                    <fullName>Av-BL2-PL2</fullName>
                </value>
                <value>
                    <fullName>Av-BL3-PL1</fullName>
                </value>
                <value>
                    <fullName>Av-BL3-PL2</fullName>
                </value>
                <value>
                    <fullName>Elec-BL1-PL1</fullName>
                </value>
                <value>
                    <fullName>Elec-BL1-PL2</fullName>
                </value>
                <value>
                    <fullName>Elec-BL2-PL1</fullName>
                </value>
                <value>
                    <fullName>Elec-BL2-PL2</fullName>
                </value>
                <value>
                    <fullName>Elec-BL3-PL1</fullName>
                </value>
                <value>
                    <fullName>Elec-BL3-PL2</fullName>
                </value>
                <value>
                    <fullName>Cyb-BL1-PL1</fullName>
                </value>
                <value>
                    <fullName>Cyb-BL1-PL2</fullName>
                </value>
                <value>
                    <fullName>Cyb-BL2-PL1</fullName>
                </value>
                <value>
                    <fullName>Cyb-BL2-PL2</fullName>
                </value>
                <value>
                    <fullName>Cyb-BL3-PL1</fullName>
                </value>
                <value>
                    <fullName>Cyb-BL3-PL2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product Line</label>
        <referenceTo>Product_Line__c</referenceTo>
        <relationshipLabel>Produits</relationshipLabel>
        <relationshipName>Produits</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <label>Product Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_UID__c</fullName>
        <displayFormat>P-{000000000}</displayFormat>
        <label>Product UID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Product_Version__c</fullName>
        <label>Product Version</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Unit_of_Measure</valueSetName>
        </valueSet>
    </fields>
    <label>Produit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GBU__c</columns>
        <columns>Business_Line__c</columns>
        <columns>Product_Line__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Product_UID__c</columns>
        <columns>Legal_Entity__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Product_Status__c</columns>
        <columns>Orderable__c</columns>
        <columns>Export_Control_Sensibility__c</columns>
        <columns>Default_Price_Per_Unit__c</columns>
        <columns>Unit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Produits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>