force-app/main/default/objects/Produit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GBU__c</columns>
    <columns>Business_Line__c</columns>
    <columns>Product_Line__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Product_UID__c</columns>
    <columns>Legal_Entity__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Product_Status__c</columns>
    <columns>Orderable__c</columns>
    <columns>Export_Control_Sensibility__c</columns>
    <columns>Default_Price_Per_Unit__c</columns>
    <columns>Unit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>